# mpl-v1

./: .gitignore  LICENSE  Readme.md  blog.md  language-notes.txt  mpl.cabal  readme.md  stack.yaml
app/: Main.hs
cbits/: haskell-v8.cc
config/: Example.hs
docs/: readme.md
documentation/: type-rules.tex
lib/: libffi.dylib
project-cli/: Main.hs
repl/: Main.hs
repl/Repl/: State.hs
scratch/: a.out  one.bc  one.ll  one.s
script/: documentation  repl  run  test
src/: V8.hsc
src/Mpl/: AST.hs  ASTToCore.hs  Annotation.hs  Compiler.hs  Core.hs  Curry.hs  Desugar.hs  Functor2.hs  Interpreter.hs  JSUtils.hs  LLVMUtils.hs  Object.hs  Parse.hs  Parser.hs  ParserDescription.hs  ParserError.hs  ParserResult.hs  ParserUtils.hs  ParsingUtils.hs  Prelude.hs  Rendering.hs  Span.hs  SyntaxErrorMessage.hs  TypeAnnotation.hs  TypeChecker.hs  TypeInterpreter.hs  Typechecker.hs  Typing.hs  Utils.hs
src/Mpl/Common/: Annotation.hs  BackendJS.hs  BackendLLVM.hs  Core.hs  Parsers.hs  Parsing.hs  ParsingUtils.hs  Syntax.hs  SyntaxToCore.hs
src/Mpl/Dyn/: AST.hs  Core.hs  Desugar.hs  Interpreter.hs  Parser.hs
src/Mpl/Parser/: SourceSpan.hs
src/Mpl/Rendering/: ParserError.hs  TypeError.hs
src/Mpl/Ty/: AST.hs  Parser.hs
src/Mpl/Typed/: BackendJS.hs  Core.hs  Parsing.hs  Syntax.hs  SyntaxToCore.hs  Typecheck.hs
src/Mpl/Unmanaged/: Syntax.hs
src/Mpl/Untyped/: BackendJS.hs  BackendLLVM.hs  Core.hs  Parsing.hs  Syntax.hs  SyntaxToCore.hs
test/: ASTHelpers.hs  TestUtils.hs  V8Spec.hs
test/Helper/: AST.hs  Test.hs
test/Mpl/: ASTToCoreSpec.hs  AnnotationSpec.hs  CompilerSpec.hs  CurrySpec.hs  DesugarSpec.hs  InterpreterSpec.hs  ParserSpec.hs  ParsingSpec.hs  TypeAnnotationSpec.hs  TypeCheckerSpec.hs  TypeInterpreterSpec.hs  TypecheckerSpec.hs  TypingSpec.hs
test/Mpl/Common/: AnnotationSpec.hs  CoreSpec.hs  ParsersSpec.hs  ParsingSpec.hs  SyntaxToCoreSpec.hs  TestUtils.hs
test/Mpl/Dyn/: DesugarSpec.hs  InterpreterSpec.hs  ParserSpec.hs
test/Mpl/Ty/: ParserSpec.hs
test/Mpl/Typed/: BackendJSSpec.hs  ParsingSpec.hs  SyntaxToCoreSpec.hs  TestUtils.hs  TypecheckSpec.hs
test/Mpl/Untyped/: BackendJSSpec.hs  BackendLLVMSpec.hs  ParsingSpec.hs  SyntaxToCoreSpec.hs  TestUtils.hs
test/TestCases/Dyn/Interpreter/: let-00.mpldyn
test/TestCases/Dyn/Parser/: application-00.mpldyn  application-01.mpldyn  definition-00.mpldyn  definition-01.mpldyn  definition-02.mpldyn  lambda-00.mpldyn  lambda-01.mpldyn  lambda-02.mpldyn  list-00.mpldyn  program-00.mpldyn  program-01.mpldyn  program-02.mpldyn  real-01.mpldyn  real-02.mpldyn  record-00.mpldyn
