name:                mpl
version:             0.1.0.0
synopsis:            Initial project template from stack, using hspec and quickcheck
description:         Please see README.md
homepage:            https://github.com/githubuser/mpl#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Baker
maintainer:          michaeltbaker@gmail.com
copyright:           2016 Michael Baker
category:            Compiler
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:
    src

  exposed-modules:
    Mpl.Utils,
    Mpl.Annotation,
    Mpl.Common.Syntax,
    Mpl.Common.Parsing,
    Mpl.Common.ParsingUtils,
    Mpl.Common.BackendJS,
    Mpl.Common.BackendLLVM,
    Mpl.Typed.Syntax,
    Mpl.Typed.Parsing,
    Mpl.Typed.BackendJS,
    Mpl.Untyped.Syntax,
    Mpl.Untyped.Parsing,
    Mpl.Untyped.BackendJS,
    Mpl.Untyped.BackendLLVM

  build-depends:
    base >= 4.7 && < 5,
    text,
    containers,
    lens,
    mtl,
    comonad,
    free,
    trifecta,
    parsers,
    bytestring,
    transformers,
    llvm-general,
    llvm-general-pure,
    recursion-schemes,
    language-javascript

  ghc-options:
    -fwarn-incomplete-patterns
    -Werror

  default-extensions:
    OverloadedStrings,
    DeriveFunctor,
    DeriveGeneric,
    FlexibleContexts,
    DeriveTraversable,
    TypeFamilies,
    TypeSynonymInstances

  default-language:
    Haskell2010

executable mpl
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mpl
  default-language:    Haskell2010

test-suite mpl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  build-depends:
    base,
    mpl,
    hspec,
    QuickCheck,
    llvm-general,
    transformers,
    mtl,
    recursion-schemes,
    language-javascript

  other-modules:
    Mpl.AnnotationSpec,
    Mpl.Typed.BackendJSSpec,
    Mpl.Typed.ParsingSpec,
    Mpl.Untyped.BackendJSSpec,
    Mpl.Untyped.ParsingSpec,
    Mpl.Untyped.BackendLLVMSpec,
    TestUtils

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N

  default-extensions:
    OverloadedStrings,
    DeriveFunctor,
    DeriveGeneric,
    DeriveTraversable

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/mpl
