name:                mpl
version:             0.1.0.0
synopsis:            Initial project template from stack, using hspec and quickcheck
description:         Please see README.md
homepage:            https://github.com/githubuser/mpl#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Baker
maintainer:          michaeltbaker@gmail.com
copyright:           2016 Michael Baker
category:            Compiler
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:
    src

  exposed-modules:
    Mpl.Annotation,
    Mpl.Common.BackendJS,
    Mpl.Common.BackendLLVM,
    Mpl.Common.Parsers,
    Mpl.Common.Parsing,
    Mpl.Common.Syntax,
    Mpl.JSUtils,
    Mpl.LLVMUtils,
    Mpl.Parser,
    Mpl.ParserDescription,
    Mpl.ParserError,
    Mpl.ParserUtils,
    Mpl.Rendering,
    Mpl.Rendering.ParserError,
    Mpl.Typed.BackendJS,
    Mpl.Typed.Parsing,
    Mpl.Typed.Syntax,
    Mpl.Untyped.BackendJS,
    Mpl.Untyped.BackendLLVM,
    Mpl.Untyped.Parsing,
    Mpl.Untyped.Syntax,
    Mpl.Utils,
    V8

  build-depends:
    base >= 4.7 && < 5,
    bytestring,
    comonad,
    containers,
    free,
    language-javascript,
    lens,
    llvm-general,
    llvm-general-pure,
    mtl,
    parsers,
    recursion-schemes,
    reducers,
    utf8-string,
    semigroups,
    ansi-wl-pprint,
    text,
    transformers,
    trifecta

  ghc-options:
    -fwarn-incomplete-patterns
    -Werror

  default-extensions:
    ConstraintKinds,
    DeriveFunctor,
    DeriveGeneric,
    DeriveTraversable,
    FlexibleContexts,
    OverloadedStrings,
    TypeFamilies,
    TypeSynonymInstances,
    UndecidableInstances

  include-dirs:
    vendor/v8/include

  c-sources:
    cbits/haskell-v8.cc

  extra-libraries:
    v8,
    v8_base,
    v8_libbase,
    v8_snapshot,
    v8_libplatform

  default-language:
    Haskell2010

executable repl
  hs-source-dirs:
    repl

  main-is:
    Main.hs

  other-modules:
    Repl.State

  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -fwarn-incomplete-patterns -fno-warn-missing-signatures -Werror

  build-depends:
    ansi-terminal,
    base,
    haskeline,
    mpl,
    terminal-size,
    transformers,
    tabl

  default-language:
    Haskell2010

  default-extensions:
    OverloadedStrings

test-suite mpl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  build-depends:
    QuickCheck,
    base,
    hspec,
    language-javascript,
    llvm-general,
    mpl,
    mtl,
    process,
    recursion-schemes,
    transformers

  other-modules:
    Mpl.AnnotationSpec,
    Mpl.Common.ParsersSpec,
    Mpl.Common.ParsingSpec,
    Mpl.Typed.BackendJSSpec,
    Mpl.Typed.ParsingSpec,
    Mpl.Untyped.BackendJSSpec,
    Mpl.Untyped.BackendLLVMSpec,
    TestUtils,
    V8Spec

  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N

  default-extensions:
    OverloadedStrings,
    DeriveFunctor,
    DeriveGeneric,
    DeriveTraversable,
    FlexibleContexts

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/mpl
