name:                mpl
version:             0.1.0.0
synopsis:            Initial project template from stack, using hspec and quickcheck
description:         Please see README.md
homepage:            https://github.com/githubuser/mpl#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Baker
maintainer:          michaeltbaker@gmail.com
copyright:           2016 Michael Baker
category:            Compiler
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:
    src

  exposed-modules:
    Mpl.Annotation,
    Mpl.Common.BackendJS,
    Mpl.Common.Core,
    Mpl.Common.Parsing,
    Mpl.Common.Syntax,
    Mpl.Common.SyntaxToCore,
    Mpl.Compiler,
    Mpl.JSUtils,
    Mpl.Parser,
    Mpl.Parser.SourceSpan,
    Mpl.ParserDescription,
    Mpl.ParserError,
    Mpl.ParserUtils,
    Mpl.Prelude,
    Mpl.Rendering,
    Mpl.Rendering.ParserError,
    Mpl.Rendering.TypeError,
    Mpl.Typed.BackendJS,
    Mpl.Typed.Core,
    Mpl.Typed.Parsing,
    Mpl.Typed.Syntax,
    Mpl.Typed.SyntaxToCore,
    Mpl.Typed.Typecheck,
    Mpl.Untyped.BackendJS,
    Mpl.Untyped.Core,
    Mpl.Untyped.Parsing,
    Mpl.Untyped.Syntax,
    Mpl.Untyped.SyntaxToCore,
    Mpl.Utils,
    V8

  build-depends:
    ansi-wl-pprint,
    base >= 4.7 && < 5,
    bytestring,
    comonad,
    containers,
    free,
    freer-effects,
    language-javascript,
    lens,
    llvm-general,
    llvm-general-pure,
    mtl,
    parsers,
    recursion-schemes,
    reducers,
    semigroups,
    text,
    text-metrics,
    transformers,
    trifecta,
    utf8-string

  ghc-options:
    -fwarn-incomplete-patterns
    -Werror

  default-extensions:
    ConstraintKinds,
    DataKinds,
    DeriveDataTypeable,
    DeriveFunctor,
    DeriveGeneric,
    DeriveTraversable,
    FlexibleContexts,
    FlexibleInstances,
    FunctionalDependencies,
    GADTs,
    MultiParamTypeClasses,
    NoImplicitPrelude,
    OverloadedStrings,
    ScopedTypeVariables,
    StandaloneDeriving,
    TypeFamilies,
    TypeOperators,
    TypeSynonymInstances,
    UndecidableInstances

  include-dirs:
    vendor/v8/include

  c-sources:
    cbits/haskell-v8.cc

  extra-libraries:
    v8,
    v8_base,
    v8_libbase,
    v8_snapshot,
    v8_libplatform

  default-language:
    Haskell2010

executable repl
  hs-source-dirs:
    repl

  main-is:
    Main.hs

  other-modules:
    Repl.State

  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -fwarn-incomplete-patterns -fno-warn-missing-signatures -Werror

  build-depends:
    ansi-terminal,
    base,
    haskeline,
    mpl,
    terminal-size,
    transformers,
    tabl

  default-language:
    Haskell2010

  default-extensions:
    OverloadedStrings

executable cli
  hs-source-dirs:
    project-cli

  main-is:
    Main.hs

  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -fwarn-incomplete-patterns -fno-warn-missing-signatures -Werror

  build-depends:
    base,
    optparse-generic,
    text,
    turtle

  default-language:
    Haskell2010

  default-extensions:
    DataKinds,
    DeriveGeneric,
    OverloadedStrings,
    TypeOperators

test-suite mpl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  build-depends:
    QuickCheck,
    base,
    hspec,
    hspec-core,
    language-javascript,
    llvm-general,
    mpl,
    mtl,
    process,
    recursion-schemes,
    transformers

  other-modules:
    Mpl.AnnotationSpec,
    Mpl.Common.ParsingSpec,
    Mpl.Common.SyntaxToCoreSpec,
    Mpl.Typed.BackendJSSpec,
    Mpl.Typed.SyntaxToCoreSpec,
    Mpl.Typed.ParsingSpec,
    Mpl.Typed.TypecheckSpec,
    Mpl.Typed.TestUtils,
    Mpl.Untyped.BackendJSSpec,
    Mpl.Untyped.SyntaxToCoreSpec,
    TestUtils,
    V8Spec

  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N

  default-extensions:
    DeriveFunctor,
    DeriveGeneric,
    DeriveTraversable,
    FlexibleContexts,
    OverloadedStrings

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/mpl
